# EMG-Project

./: .gitignore  CMakeLists.txt  README.md  TEST.md  button_service.c  button_service.h  main.c  prj.conf
install/: local_setup.sh  setup.sh
install/emg_sensor/lib/emg_sensor/: ble_bridge  command_publisher  hand_controller
install/emg_sensor/share/emg_sensor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/: .gitignore  README.md
ros2_ws/src/emg_sensor/: package.xml  setup.cfg  setup.py
ros2_ws/src/emg_sensor/resource/: emg_sensor
ros2_ws/src/emg_sensor/scripts/: ble_bridge.py  command_publisher.py  demo_ble.py  hand_controller.py  test_pca_pwm.py  test_servos.py
